--- a/static/css/MyProfile.css
+++ b/static/css/MyProfile.css
@@ -155,7 +155,27 @@ body {
         0 0 20px rgba(173,216,230,0.6);
 
     overflow:hidden;
+    opacity: 0;
+    filter: blur(10px);
+    animation: blurReveal 0.9s ease forwards;
+    
 }
+
+
+
+@keyframes blurReveal {
+    to {
+        opacity: 1;
+        filter: blur(0);
+    }
+}
+
+
+
+
+
+
+
 .profile-view-card:hover{
      transform: translateY(-6px) scale(1.01);
     box-shadow:
