--- a/templates/FrontPage.html
+++ b/templates/FrontPage.html
@@ -12,8 +12,8 @@
     <header class="header">
         <div class="logo">SGDTP Alumni Portal</div>
         <nav class="nav">
-           <a href="{{ url_for('login') }}" class="login-link">Login</a>
-           <a href="{{ url_for('register') }}" class="register-link">Register</a>
+           <a href="{{ url_for('login') }}"  target="_blank" class="login-link" >Login</a>
+           <a href="{{ url_for('register') }}"  target="_blank" class="register-link" >Register</a>
         </nav>
     </header>
 
