--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -14,8 +14,8 @@
     <header class="header">
         <div class="logo">SGDTP Alumni Portal</div>
         <nav class="nav">
-           <a href="{{ url_for('login') }}" class="login-link">Login</a>
-           <a href="{{ url_for('register') }}" class="register-link">Register</a>
+           <a href="{{ url_for('login') }}" class="login-link" target="_blank">Login</a>
+           <a href="{{ url_for('register') }}" class="register-link" target="_blank">Register</a>
         </nav>
     </header>
 
