--- a/static/css/Dashboard.css
+++ b/static/css/Dashboard.css
@@ -1,6 +1,3 @@
-*{
-    box-sizing: border-box;
-}
 :root {
     --primary-blue: #06478c; /* Light blue from the header */
     --accent-blue: #007bff; /* Button blue */
@@ -193,13 +190,7 @@ body {
     padding: 15px;
     margin: 10px 0;
     border-radius: 6px;
-    border: 1px solid #b8ceff;
-    height: 100%;
-    justify-content: space-between;
 }
-
-
-
 
 .btn {
     padding: 8px 15px;
@@ -579,10 +570,9 @@ body {
 
 /* LIST CONTAINER */
 .alumni-grid{
-    display:grid;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-    gap:20px;
-    align-items: stretch;
+    display:flex;
+    flex-direction:column;
+    gap:16px;
 }
 .card{
     background:rgb(241, 248, 255);
@@ -625,7 +615,6 @@ body {
     border-radius:50%;
     object-fit:cover;
     border:2px solid var(--primary);
-    flex-shrink: 0;
 }
 .badge{
     padding:4px 10px;
