Updated website files

--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -146,7 +146,8 @@
           placeholder="Type a message..."
           disabled
         >
-        <button onclick="sendChat()" disabled>Send</button>
+        <button id="sendBtn" disabled>Send</button>
+
       </div>
       
     </main>
