--- a/templates/MyProfile.html
+++ b/templates/MyProfile.html
@@ -103,7 +103,14 @@
 
         <!-- Student -->
         <div id="studentFields" class="role-section" style="display:none;">
-            <input id="stuDept" type="text" placeholder="Department 🏬">
+             <select id="stuDept">
+                <option value="">Select Department</option>
+                <option value="Computer">Computer Department</option>
+                <option value="Mechanical">Mechanical Department</option>
+                <option value="Electrical">Electrical Department</option>
+                <option value="Civil">Civil Department</option>
+                <option value="Chemical">Chemical Department</option>
+            </select>
             <input id="stuYear" type="number" placeholder="Admission Year 🗓️">
 
             <select id="committee">
@@ -112,7 +119,6 @@
                 <option value="Cultural">Cultural Committee</option>
                 <option value="Sports">Sports Committee</option>
                 <option value="Technical">Technical Committee</option>
-                <option value="NO">NO</option>
             </select>
         </div>
 
