--- a/alumni-node-backend/templates/login_page.html
+++ b/alumni-node-backend/templates/login_page.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="/static/images/alumni_web_icon.webp">
     <title>Login</title>
     <link rel="stylesheet" href="/static/css/login_page.css">
-    <script src="/static/js/Login.js"></script>
+    <script type="module" src="/static/js/Login.js"></script>
 
 </head>
 <body>
