--- a/alumni-node-backend/templates/MyProfile.html
+++ b/alumni-node-backend/templates/MyProfile.html
@@ -124,7 +124,14 @@
 
         <!-- Alumni -->
         <div id="alumniFields" class="role-section" style="display:none;">
-            <input id="aluDept" type="text" placeholder="Department 🏬">
+             <select id="aluDept">
+                <option value="">Select Department</option>
+                <option value="Computer">Computer Department</option>
+                <option value="Mechanical">Mechanical Department</option>
+                <option value="Electrical">Electrical Department</option>
+                <option value="Civil">Civil Department</option>
+                <option value="Chemical">Chemical Department</option>
+            </select>
             <input id="aluPass" type="number" placeholder="Passing Year 🗓️">
             <input id="company" type="text" placeholder="Current Company 🏢">
             <input id="job" type="text" placeholder="Job Role 💼">
@@ -134,7 +141,14 @@
 
         <!-- Teacher -->
         <div id="teacherFields" class="role-section" style="display:none;">
-            <input id="teachDept" type="text" placeholder="Department 🏬">
+             <select id="teachDept">
+                <option value="">Select Department</option>
+                <option value="Computer">Computer Department</option>
+                <option value="Mechanical">Mechanical Department</option>
+                <option value="Electrical">Electrical Department</option>
+                <option value="Civil">Civil Department</option>
+                <option value="Chemical">Chemical Department</option>
+            </select>
             <input id="teachExp" type="text" placeholder="Teaching Experience ⏱️">
         </div>
 
