--- a/alumni-node-backend/templates/FrontPage.html
+++ b/alumni-node-backend/templates/FrontPage.html
@@ -12,6 +12,7 @@
     <header class="header">
         <div class="logo">SGDTP Alumni Portal</div>
         <nav class="nav">
+            <a href="/templates/Events.html"  target="_blank" class="login-link" >See Events</a>
            <a href="/templates/login_page.html"  target="_blank" class="login-link" >Login</a>
            <a href="/templates/registration_page.html"  target="_blank" class="register-link" >Register</a>
         </nav>
