--- a/alumni-node-backend/templates/Chat.html
+++ b/alumni-node-backend/templates/Chat.html
@@ -18,13 +18,9 @@
     </header>
 
 
-<div id="popup" class="popup hidden">
-  <span id="popupMessage"></span>
-</div>
-
-
-
 <div class="app">
+<!-- Popup -->
+<div id="popupContainer" class="popup-container"></div>
 
   <h1>Send Message</h1>
 
