Updated website files

--- a/alumni-node-backend/templates/MyProfile.html
+++ b/alumni-node-backend/templates/MyProfile.html
@@ -162,6 +162,6 @@
 
 </div>
 
-<script type="module" src="/static/js/MyProfile.js"></script>
+<script type="module" src="/static/js/myprofile.js"></script>
 </body>
 </html>
