--- a/alumni-node-backend/templates/login_page.html
+++ b/alumni-node-backend/templates/login_page.html
@@ -14,8 +14,8 @@
     <header class="header">
         <div class="logo">SGDTP Alumni Portal</div>
         <nav class="nav">
-           <a href="/templates/login_page.html" class="login-link">Login</a>
-           <a href="/templates/registration_page.html" class="register-link">Register</a>
+           <a href="/login_page.html" class="login-link">Login</a>
+           <a href="/registration_page.html" class="register-link">Register</a>
         </nav>
     </header>
 
