Updated website files

--- a/alumni-node-backend/templates/login_page.html
+++ b/alumni-node-backend/templates/login_page.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="/static/images/alumni_web_icon.webp">
     <title>Login</title>
     <link rel="stylesheet" href="/static/css/login_page.css">
-    <script type="module" src="/static/js/login.js"></script>
+    <script type="module" src="/static/js/Login.js"></script>
 
 </head>
 <body>
@@ -14,8 +14,8 @@
     <header class="header">
         <div class="logo">SGDTP Alumni Portal</div>
         <nav class="nav">
-           <a href="/login_page.html" class="login-link">Login</a>
-           <a href="/registration_page.html" class="register-link">Register</a>
+           <a href="/templates/login_page.html" class="login-link">Login</a>
+           <a href="/templates/registration_page.html" class="register-link">Register</a>
         </nav>
     </header>
 
